[*] Display current compute

--- a/src/index.css
+++ b/src/index.css
@@ -10,17 +10,13 @@ body {
 }
 
 .calculator {
+  position: relative;
   min-width: 400px;
   max-width: 560px;
   border-radius: 5px;
   padding: 10px;
   border: 3px solid rgba(255, 255, 255, 0.1);
   border-bottom: 8px solid rgba(255, 255, 255, 0.1);
-}
-
-.display {
-  display: flex;
-  flex-direction: column;
 }
 
 .screen {
@@ -31,16 +27,30 @@ body {
   border-radius: 3px;
   color: white;
   display: flex;
-  font-size: 40px;
   height: 65px;
   justify-content: flex-end;
   padding: 0px 10px;
   width: 100%;
+  font-size: 25px;
 }
 
-.screen p {
-  text-overflow: ellipsis;
+.screen .compute {
   margin: 0;
+  margin-top: 25px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.result {
+  overflow: hidden;
+  width: 70%;
+  text-align: right;
+  position: absolute;
+  right: 18px;
+  top: 0px;
+  color: #c4d5e0;
+  margin-bottom: 25px;
+  text-overflow: ellipsis;
   white-space: nowrap;
 }
 
